--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <img src="./images/illustration-grow-together.svg" alt="">
             </div>
         </div>
-                <div class="card">
+        <div class="card">
                     <div class="card-item">
                         <h1>Flowing Conversations</h1>
                         <p>
@@ -58,8 +58,8 @@
                     <div class="card-item">
                         <img src="./images/illustration-flowing-conversation.svg" alt="">
                     </div>
-                </div>
-                <div class="card">
+        </div>
+        <div class="card">
                     <div class="card-item">
                         <h1>Your Users</h1>
                         <p>
@@ -71,8 +71,14 @@
                     <div class="card-item">
                         <img src="./images/illustration-your-users.svg" alt="">
                     </div>
-                </div>
+        </div>
     </main>
+    <section>
+        <div class="call-to-act-card">
+            <p>Ready To Build Your Community?</p>
+            <button>Get Started For Free</button>
+        </div>
+    </section>
     <footer></footer>
 </body>
 </html>
