improved ui and responsiveness

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     </div>
         </div>
     </main>
-    <section>
+    <section class="call-to-act-sec">
         <div class="call-to-act-card">
             <p>Ready To Build Your Community?</p>
             <button>Get Started For Free</button>
