improved ui and responsiveness

--- a/index.html
+++ b/index.html
@@ -80,6 +80,32 @@
             <button>Get Started For Free</button>
         </div>
     </section>
-    <footer></footer>
+    <footer>
+        <div class="ft-intro">
+            <img src="images/logo.svg" alt="huddle logo">
+            <div>
+                <i class="fas fa-location"></i>
+                <p></p>
+            </div>
+            <a href="tel:+15431234567">+1-543-123-4567</a>
+            <a href="mailto:example@huddle.com">example@huddle.com</a>
+        </div>
+        <div class="ft-link-1">
+            <a href="#">About Us</a>
+            <a href="#">What We Do</a>
+            <a href="#">FAQ</a>
+        </div>
+        <div class="ft-link-2">
+            <a href="#">Career</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact Us</a>
+        </div>
+            
+        <div class="ft-social">
+            <i class="fas fa-social-facebook"></i>
+            <i class="fas fa-social-facebook"></i>
+            <i class="fas fa-social-facebook"></i>
+        </div>
+    </footer>
 </body>
 </html>
