improved content and responsiveness

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Responsive Landing Page | Adegite Taiwo</title>
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
+
 </head>
 <body>
     <header>
@@ -85,7 +87,11 @@
             <img src="images/logo.svg" alt="huddle logo">
             <div>
                 <i class="fas fa-location"></i>
-                <p></p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                    elit. Quae culpa hic nihil eius quod rem, 
+                    repellat illum mollitia tempore molestiae 
+                    ut alias quam ea eligendi impedit? Voluptatem 
+                    magnam earum odio!</p>
             </div>
             <a href="tel:+15431234567">+1-543-123-4567</a>
             <a href="mailto:example@huddle.com">example@huddle.com</a>
