improved content and responsiveness

--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
         </div>
             
         <div class="ft-social">
-            <i class="fas fa-social-facebook"></i>
-            <i class="fas fa-social-facebook"></i>
-            <i class="fas fa-social-facebook"></i>
+            <i class="fab fa-facebook-f"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-instagram"></i>
         </div>
     </footer>
 </body>
