improved content and responsiveness

--- a/index.html
+++ b/index.html
@@ -86,15 +86,21 @@
         <div class="ft-intro">
             <img src="images/logo.svg" alt="huddle logo">
             <div>
-                <i class="fas fa-location"></i>
+                <img src="images/icon-location.svg" alt="location icon">
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing 
                     elit. Quae culpa hic nihil eius quod rem, 
                     repellat illum mollitia tempore molestiae 
                     ut alias quam ea eligendi impedit? Voluptatem 
                     magnam earum odio!</p>
             </div>
-            <a href="tel:+15431234567">+1-543-123-4567</a>
-            <a href="mailto:example@huddle.com">example@huddle.com</a>
+            <div>
+                <img src="images/icon-phone.svg" alt="phone icon">
+                <a href="tel:+15431234567">+1-543-123-4567</a>
+            </div>
+            <div>
+                <img src="images/icon-email.svg" alt="">
+                <a href="mailto:example@huddle.com">example@huddle.com</a>
+            </div>
         </div>
         <div class="ft-link-1">
             <a href="#">About Us</a>
@@ -108,9 +114,15 @@
         </div>
             
         <div class="ft-social">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
+            <div>
+                <i class="fab fa-facebook-f"></i>
+            </div>
+            <div>
+                <i class="fab fa-twitter"></i>
+            </div>
+            <div>
+                <i class="fab fa-instagram"></i>
+            </div>
         </div>
     </footer>
 </body>
