--- a/index.html
+++ b/index.html
@@ -85,13 +85,15 @@
     <footer>
         <div class="ft-intro">
             <img src="images/logo.svg" alt="huddle logo">
-            <div>
+            <i src="./images/logo.svg"></i>
+            <div style="display: inline-flex;">
                 <img src="images/icon-location.svg" alt="location icon">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                    elit. Quae culpa hic nihil eius quod rem, 
-                    repellat illum mollitia tempore molestiae 
-                    ut alias quam ea eligendi impedit? Voluptatem 
-                    magnam earum odio!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing
+                    elit. Quae culpa hic nihil eius quod rem,
+                    repellat illum mollitia tempore molestiae
+                    ut alias quam ea eligendi impedit? Voluptatem
+                    magnam earum odio!
+                </p>
             </div>
             <div>
                 <img src="images/icon-phone.svg" alt="phone icon">
