--- a/index.html
+++ b/index.html
@@ -100,11 +100,11 @@
                     elit. Quae culpa hic nihil eius quod rem!
                 </p>
             </div>
-            <div>
+            <div style="display: flex;">
                 <img src="images/icon-phone.svg" alt="phone icon">
                 <a href="tel:+15431234567">+1-543-123-4567</a>
             </div>
-            <div>
+            <div style="display: flex;">
                 <img src="images/icon-email.svg" alt="">
                 <a href="mailto:example@huddle.com">example@huddle.com</a>
             </div>
